tests/baselines/reference/asyncFunctionDeclaration13_es6.errors.txt
asyncFunctionDeclaration13_es6.ts(3,11): error TS2552: Cannot find name 'await'. Did you mean 'Awaited'?


==== asyncFunctionDeclaration13_es6.ts (1 errors) ====
    async function foo(): Promise<void> {
       // Legal to use 'await' in a type context.
       var v: await;
              ~~~~~
!!! error TS2552: Cannot find name 'await'. Did you mean 'Awaited'?
    }
    